tests/missing-typedef-opening-brace.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected an opening '{' in the custom type.

type T:
